--- a/learningPixi-master/examples/01_helloWorld.html
+++ b/learningPixi-master/examples/01_helloWorld.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Hello World xd xd </title>
 </head>
 <body>
   <script src="../pixi/pixi.min.js"></script>
